--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,11 @@
     -->
     <title>React App</title>
     <script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
-    <script>Raven.config('%REACT_APP_SENTRY_DSN%').install()</script>
+    <script>
+      if('%NODE_ENV%' !== 'development') {
+        Raven.config('%REACT_APP_SENTRY_DSN%').install()
+      }
+    </script>
   </head>
   <body>
     <noscript>
