--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  
+    <!-- Junicode -->
+   <link rel="stylesheet" href="/junicode.css">
   </head>
   <body>
     <noscript>
