--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Electronic Babylonian Literature</title>
     <script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
-    <script>if('%NODE_ENV%' === 'production') { Raven.config('%REACT_APP_SENTRY_DSN%').install() }</script>
+    <script>if('%NODE_ENV%' === 'production') { Raven.config('%REACT_APP_SENTRY_DSN%', {environment: '%NODE_ENV%'}).install() }</script>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
