Upgrade raven and add SRI hash

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Electronic Babylonian Literature</title>
-    <script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.ravenjs.com/3.24.1/raven.min.js" integrity="sha384-u3x/ed7VAUNqi6IlJSghL6rS16S32wvtcmsZpBOr+Ge1cc0ugCuUngVRa/00mS2Q" crossorigin="anonymous"></script>
     <script>if('%NODE_ENV%' === 'production') { Raven.config('%REACT_APP_SENTRY_DSN%', {environment: '%NODE_ENV%'}).install() }</script>
 
     <!-- Bootstrap -->
