Add description tag

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Electronic Babylonian Literature</title>
+    <meta name="Description" content="The Electronic Babylonian Literature (eBL) Project brings together ancient Near Eastern specialists and data scientists to revolutionize the way in which the literature of Iraq in the first millennium BCE is reconstructed and analyzed.">
     <script src="https://cdn.ravenjs.com/3.24.1/raven.min.js" integrity="sha384-u3x/ed7VAUNqi6IlJSghL6rS16S32wvtcmsZpBOr+Ge1cc0ugCuUngVRa/00mS2Q" crossorigin="anonymous"></script>
     <script>if('%NODE_ENV%' === 'production') { Raven.config('%REACT_APP_SENTRY_DSN%', {environment: '%NODE_ENV%'}).install() }</script>
-
+    
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
