Add `google-site-verification` tag

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <meta name="google-site-verification" content="J13cZ-OSwYU4IUrzsMxb9A80nUcdgkG9U4xbBR3C7LA" />
 </head>
 
 <body>
